# query-ai

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  query-ai.py
conf/: application.properties  logging.ini
query_ai/: application.py
query_ai/api/: __init__.py  context.py  contextual.py  query.py
query_ai/commons/: ModelInfo.py  __init__.py  model_info.py
query_ai/config/: __init__.py  db_config.py  model_config.py
query_ai/database/: DBMgr.py  __init__.py  db_manager.py
query_ai/logger/: __init__.py
query_ai/model/: ModelMgr.py  __init__.py  model_manager.py
query_ai/util/: ContextMgr.py  TextUtil.py  __init__.py  context_manager.py  lint_runner.py  properties.py  text_util.py
tests/: db_config_test.properties  properties_test.properties  test_Context.py  test_DBConfig.py  test_DBMgr.py  test_ModelMgr.py  test_Properties.py  test_Query.py  test_TextUtil.py
xyz/ronella/ml/query/ai/commons/: ModelInfo.py
xyz/ronella/ml/query/ai/database/: DBMgr.py  __init__.py
xyz/ronella/ml/query/ai/model/: ModelMgr.py  __init__.py
xyz/ronella/ml/query/ai/util/: ContextMgr.py  __init__.py
